--- a/game/platforms/SDL/Makefile.common
+++ b/game/platforms/SDL/Makefile.common
@@ -63,7 +63,7 @@ SOCKET_UDP_PLATFORM = Unix
 
 
 
-COMPILE_FLAGS = -std=gnu++11 -Wall -Wwrite-strings -Wchar-subscripts -Wparentheses ${DEBUG_FLAG} ${PLATFORM_COMPILE_FLAGS} ${PROFILE_FLAG} ${OPTIMIZE_FLAG} -I${ROOT_PATH}
+COMPILE_FLAGS = -Wall -Wwrite-strings -Wchar-subscripts -Wparentheses ${DEBUG_FLAG} ${PLATFORM_COMPILE_FLAGS} ${PROFILE_FLAG} ${OPTIMIZE_FLAG} -I${ROOT_PATH}
 
 COMMON_LIBS = 
 
