--- a/game/platforms/SDL/Makefile.common
+++ b/game/platforms/SDL/Makefile.common
@@ -28,7 +28,7 @@ LIBRARY_LINKER = ar
 DEBUG_ON_FLAG = -g #-DDEBUG_MEMORY
 DEBUG_OFF_FLAG = 
 
-DEBUG_FLAG = ${DEBUG_ON_FLAG}
+DEBUG_FLAG = ${DEBUG_OFF_FLAG}
 
 
 PROFILE_ON_FLAG = -pg -DUSE_GPROF_THREADS
@@ -40,7 +40,7 @@ PROFILE_FLAG = ${PROFILE_OFF_FLAG}
 OPTIMIZE_ON_FLAG = -O9
 OPTIMIZE_OFF_FLAG = -O0
 
-OPTIMIZE_FLAG = ${OPTIMIZE_OFF_FLAG}
+OPTIMIZE_FLAG = ${OPTIMIZE_ON_FLAG}
 
 
 # switch to yes to link against it
